--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,7 +49,7 @@ exclude = '''
 line-length = 120
 ignore = ["F405", "B008", "B023"]
 select = ["E", "F", "B", "C4", "DTZ", "PTH", "I001"]
-exclude = []
+exclude = ["alembic/*"]
 
 [tool.ruff.per-file-ignores]
 "**/__init__.py" = ["F401", "F403"]
